refactor: Remove redundant type assignability logic and helper methods in `Utils`
- Removed `isAssignableTo` and `isAssignableFrom` methods from `Utils` as they are no longer used.
- Deleted corresponding nested test classes (`IsAssignableFromTest` and `IsAssignableToTest`) from `UtilsTest`.
- Simplified `reverse` gatherer into `dropBlankLinesAtEnd` for improved clarity and functionality.
- Cleaned up unused constants and streamlined gatherer utility logic.